@startuml
left to right direction

class Collaborator{
  -String nameC
  -String emailC
  -String role
  }

class TransactionExecution {
  -Date endDate
  -double delay
  -String descriptionOfQuality
  -int transID
  }

class Task{
  -String idTask
  -String description
  -int timeTask
  -double costHour
  -String taskCategory
  -boolean isPayed
  -boolean isFinished
  }

class Payment{
  -double valueE
  -double valueC
}

class Freelancer {
  -String freeID
  -String name
  -String levelExp
  -String email
  -String nif
  -String iban
  -String country
}


Platform "1" -- "1" Administrator : has

Administrator "1" -- "1" User : acts as
Administrator "1" -- "1..*" Collaborator : registers

Collaborator "1" -- "1" TransactionExecution: creates
Collaborator "1" -- "1" Freelancer: creates
Collaborator "1" -- "1" Task: creates

TransactionExecution "1" -- "1" Task: has
TransactionExecution "1" -- "1" Payment: originates

Task "1" -- "1" Freelancer: made by

Freelancer "1" -- "1..*" Payment: receives


@enduml